--- a/author.html
+++ b/author.html
@@ -32,7 +32,7 @@
               </li>
 			
                 <li class="nav-item">
-                    <a class="nav-link" href="#sec2">Preorder</a>
+                    <a class="nav-link" href="order.html">Order</a>
                 </li>
 		  </ul>
 		</div>
