--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</li>
 			
 			<li class="nav-item">
-				<a class="nav-link" href="#sec2">Preorder</a>
+				<a class="nav-link" href="order.html">Order</a>
 			  </li>
 		  </ul>
 		</div>
@@ -120,7 +120,7 @@
     	<div class="row">
     		<div class="col-md-12 text-center">	
 				<h3 class="text-left pb-5">Track, Monitor and Optimize your Data Science projects with <b class="orange">Comet for Data Science</b>.</h3>	
-				<input class="btn btn-primary" type="button" value="Preorder Now!">
+				<a href="order.html"><input class="btn btn-primary" type="button" value="Order Now!"></a>
 			</div>
 		</div>
 	</div>
