--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 		window.addEventListener("hashchange", function() { scrollBy(0, -80) })
 	</script>
 
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0H6M7XKCJW"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-0H6M7XKCJW');
+	</script>
   </head>
   <body>
 
