--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container-fluid bg-header" id="title">
     	<div class="row mx-3 px-5">
 			<div class="col-sd-4">
-				<img src="media/book.jpg" class="img-fluid" alt="Comet for Data Sciences">
+				<img src="media/book.png" width="400px" class="img-fluid" alt="Comet for Data Sciences">
 			</div>
     		<div class="col-sd-8 pt-5 mt-5 pl-5" >
 				<h1 class="text-left orange">Track</h1>
