--- a/order.html
+++ b/order.html
@@ -41,7 +41,7 @@
     <div class="container-fluid bg-order" id="title">
     	<div class="row mx-5 px-5">
 			<div class="col-sd-4">
-				<img src="media/book.jpg" class="img-fluid" alt="Comet for Data Sciences">
+				<img src="media/book.png"  width="400px" class="img-fluid" alt="Comet for Data Sciences">
 			</div>
     		<div class="col-sd-8 pt-5 mt-5 pl-5" >
 				<h1 class="text-left orange">Order your copy now!</h1>
