--- a/author.html
+++ b/author.html
@@ -66,6 +66,14 @@
     	</div>
     </div>
 
+	<div class="container-fluid pt-5 px-5" id="video">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/1Ydt7HH3JdI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>		
+	</div>
+
 	<div class="container-fluid pt-5 px-5" id="intro">
     	
             <div class="row">
