added sample content

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
     	<div class="row">
     		<div class="col-md-12 text-center">	
 				<h3 class="text-left pb-5">Track, Monitor and Optimize your Data Science projects with <b class="orange">Comet for Data Science</b>.</h3>	
-				<a href="order.html"><input class="btn btn-primary" type="button" value="Order Now!"></a>
+				<a href="order.html"><input class="btn btn-primary" type="button" value="Order now!"></a>
+				<a href="media/B17530_Comet for Data_Science_eBook_preview_chapter_8.pdf"><input class="btn btn-primary" type="button" value="Get a sample"></a>
+
 			</div>
 		</div>
 	</div>
